// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .cache-ip7dnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-ip7dnq:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ip7dnq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1d6p8cj {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1d6p8cj:hover {
  background-color: #d9dadd;
}

.cache-1d6p8cj:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1d6p8cj:focus-within,
.cache-1d6p8cj:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1d6p8cj[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1d6p8cj[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1d6p8cj[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1d6p8cj[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1d6p8cj[data-checked='true']:focus-within,
.cache-1d6p8cj[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1d6p8cj[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1d6p8cj[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

.cache-11u75jq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-ip7dnq e1wstm610"
    >
      <div
        class="cache-1d6p8cj e1wstm612"
        data-checked="false"
        data-disabled="false"
      >
        <input
          aria-checked="false"
          class="cache-p9zju0 e1wstm611"
          id=":r0:"
          name="test"
          type="checkbox"
        />
      </div>
      <div
        class="cache-11u75jq ehpbis70"
      />
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-ip7dnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-ip7dnq:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ip7dnq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1d6p8cj {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1d6p8cj:hover {
  background-color: #d9dadd;
}

.cache-1d6p8cj:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1d6p8cj:focus-within,
.cache-1d6p8cj:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1d6p8cj[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1d6p8cj[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1d6p8cj[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1d6p8cj[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1d6p8cj[data-checked='true']:focus-within,
.cache-1d6p8cj[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1d6p8cj[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1d6p8cj[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

.cache-11u75jq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-ip7dnq e1wstm610"
    >
      <div
        class="cache-1d6p8cj e1wstm612"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-p9zju0 e1wstm611"
          id=":r4:"
          name="test"
          type="checkbox"
        />
      </div>
      <div
        class="cache-11u75jq ehpbis70"
      />
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-ip7dnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-ip7dnq:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ip7dnq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1d6p8cj {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1d6p8cj:hover {
  background-color: #d9dadd;
}

.cache-1d6p8cj:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1d6p8cj:focus-within,
.cache-1d6p8cj:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1d6p8cj[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1d6p8cj[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1d6p8cj[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1d6p8cj[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1d6p8cj[data-checked='true']:focus-within,
.cache-1d6p8cj[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1d6p8cj[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1d6p8cj[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

.cache-11u75jq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-ip7dnq e1wstm610"
    >
      <div
        class="cache-1d6p8cj e1wstm612"
        data-checked="false"
        data-disabled="true"
      >
        <input
          aria-checked="false"
          class="cache-p9zju0 e1wstm611"
          disabled=""
          id=":r2:"
          name="test"
          type="checkbox"
        />
      </div>
      <div
        class="cache-11u75jq ehpbis70"
      />
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-ip7dnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-ip7dnq:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-ip7dnq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1d6p8cj {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1d6p8cj:hover {
  background-color: #d9dadd;
}

.cache-1d6p8cj:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1d6p8cj:focus-within,
.cache-1d6p8cj:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1d6p8cj[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1d6p8cj[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1d6p8cj[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1d6p8cj[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1d6p8cj[data-checked='true']:focus-within,
.cache-1d6p8cj[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1d6p8cj[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1d6p8cj[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-p9zju0[disabled] {
  cursor: not-allowed;
}

.cache-11u75jq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-okwmur {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-ip7dnq e1wstm610"
    >
      <div
        class="cache-1d6p8cj e1wstm612"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="cache-p9zju0 e1wstm611"
          id=":r6:"
          name="test"
          type="checkbox"
        />
      </div>
      <div
        class="cache-11u75jq ehpbis70"
      >
        <div
          class="cache-okwmur e3f5lzv0"
        >
          test
        </div>
      </div>
    </label>
  </form>
</DocumentFragment>
`;
